--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
     // Apply the application plugin to add support for building a CLI application
     id 'application'
+    id 'java-library'
 }
 
 
@@ -26,8 +27,68 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    //Check for the latest version here: http://plugins.gradle.org/plugin/com.jfrog.artifactory
+    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
+     // This dependency is exported to consumers, that is to say found on their compile classpath.
+    api 'org.apache.commons:commons-math3:3.6.1'
+
+    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+    implementation 'com.google.guava:guava:27.0.1-jre'
+
 }
 
 application {
     mainClassName = 'com.orbis.stapi.Server'
 }
+
+
+version = '0.0.3'
+group = 'ro.trc.common'
+sourceCompatibility = '1.8'
+buildInfo.build.name='my-super-cool-build'
+buildInfo.build.number='m2020'
+
+
+apply plugin: 'maven-publish'
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            //artifact("build/libs/madhav-$version"+".jar") {
+              //  extension 'jar'
+              from components.java
+          // }
+        }
+    }
+}
+allprojects {
+    apply plugin: "com.jfrog.artifactory"
+}
+
+artifactory {
+    contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
+    publish {
+        repository {
+            repoKey = 'libs-snapshot-local'
+            username = "${artifactory_user}"
+            password = "${artifactory_password}"
+            maven = true
+
+        }
+        defaults {
+            publications ('mavenJava')
+            publishArtifacts=true
+            publishPom=true
+        }
+    }
+    resolve {
+        repository {
+            repoKey = 'libs-release'
+            username = "${artifactory_user}"
+            password = "${artifactory_password}"
+            maven = true
+
+                          }
+    }
+}
+
+
