--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,20 @@
 buildscript{
-
-
-repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
-    dependencies {
-        //Check for the latest version here: http://plugins.gradle.org/plugin/com.jfrog.artifactory
-        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
+  repositories {
+      jcenter()
+        dependencies {
+           classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
     }
-
+  }
 }
-}
 
-
-plugins {
-    // Apply the java plugin to add support for Java
+plugins { 
     id 'java'
-
-    // Apply the application plugin to add support for building a CLI application
     id 'application'
     id 'java-library'
+}
+
+repositories {
+    jcenter()
 }
 
 dependencies {
@@ -33,48 +27,38 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '2.12.1'
-
-    // Use JUnit test framework
+    compile group: 'org.glassfish.hk2', name: 'hk2-utils', version: '2.5.0-b42'
+    compile group: 'org.glassfish.hk2.external', name: 'javax.inject', version: '2.5.0-b42'
+    
     testImplementation 'junit:junit:4.12'
-    //Check for the latest version here: http://plugins.gradle.org/plugin/com.jfrog.artifactory
-    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
-     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:27.0.1-jre'
-
 }
 
 application {
     mainClassName = 'com.orbis.stapi.Server'
 }
 
-
-version = '0.0.3'
+version = '0.0.4'
 group = 'ro.trc.common'
-sourceCompatibility = '1.8'
-buildInfo.build.name='my-super-cool-build'
-buildInfo.build.number='m2020'
+sourceCompatibility = '11'
 
 
 apply plugin: 'maven-publish'
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            //artifact("build/libs/madhav-$version"+".jar") {
-              //  extension 'jar'
               from components.java
-          // }
         }
     }
 }
+
 allprojects {
     apply plugin: "com.jfrog.artifactory"
 }
 
 artifactory {
-    contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
+    contextUrl = "${artifactory_contextUrl}" 
     publish {
         repository {
             repoKey = 'libs-snapshot-local'
