--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ artifactory {
     contextUrl = "${artifactory_contextUrl}" 
     publish {
         repository {
-            repoKey = 'libs-snapshot-local'
+            repoKey = 'StaPI'
             username = "${artifactory_user}"
             password = "${artifactory_password}"
             maven = true
