few more changes

--- a/Dockerfile_bkporig
+++ b/Dockerfile_bkporig
@@ -1,4 +1,4 @@
-FROM gradle
+FROM debian
 RUN apt-get update && apt-get upgrade -y && apt-get install -y software-properties-common && apt-get install default-jdk -y
 ENV JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
 ENV PATH="$PATH:$JAVA_HOME/bin"
